<resources>
    <string name="app_name">Счастливый Номер</string>
    <string name="app_name_start">Счастливый</string>
    <string name="app_name_end">Номер</string>

    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="send">Отправить</string>

    <string name="preview_info">Учавствуй в ежедневной акции не отрываясь от работы!
        Стань счастливчиком, который возьмет счастливый номер и получит свой приз!</string>
    <string name="preview_sign_up">Стать участником</string>

    <string name="login_tel">№ телефона</string>
    <string name="login_password">Пароль</string>

    <string name="register_first_name">Имя</string>
    <string name="register_last_name">Фамилия</string>
    <string name="register_patronymic">Отчество</string>
    <string name="register_birth_date">Дата рождения</string>
    <string name="register_city">Город, где Вы работаете</string>
    <string name="register_car_number">№ рабочего автомобиля</string>
    <string name="register_car_region">Регион</string>
    <string name="register_car_country" translatable="false">RUS</string>
    <string name="register_continue">Продолжить</string>
    <string name="register_condition">Регистрируясь, подтверждаю согласие с</string>
    <string name="register_condition_offer">офертой</string>
    <string name="register_password_title">Смена пароля</string>
    <string name="register_password_old">Текущий пароль</string>
    <string name="register_password_new">Новый пароль</string>
    <string name="register_password_new_again">Новый пароль еще раз</string>

    <string name="deal_contacts">Контакты</string>
    <string name="deal_condition">Условия акции</string>
    <string name="deal_offers">Акции</string>
    <string name="deal_offer">Акция</string>
    <string name="deal_winners">Победители</string>
    <string name="deal_history">История операций</string>
    <string name="deal_profile">Профиль</string>
    <string name="deal_payout">Вывести</string>
    <string name="deal_logout">Выйти</string>
    <string name="deal_present">приз</string>
    <string name="deal_until">до счастливого номера</string>
    <string name="deal_participants">участников</string>
    <string name="deal_cost">стоимость участия</string>
    <string name="deal_button">Принять участие</string>
    <string name="deal_empty">Действующих акций нет!</string>
    <string name="deal_next_offers">Начало следующих акций:</string>
    <string name="deal_next_item">Акция №%s начнется %s</string>
    <string name="deal_next_item_empty">Акции не объявлены</string>
    <string name="deal_city">Город</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="nav_group_title">Дополнительно</string>

    <string name="payment">Оплата</string>
    <string name="payment_card">Оплатить картой</string>
    <string name="payment_wallet">Оплатить с баланса</string>

    <string name="profile_password">Изменить пароль</string>
    <string name="profile_save">Сохранить</string>

    <string name="history_amount">Сумма</string>
    <string name="history_provider">Провайдер</string>
    <string name="history_id">№ счета</string>
    <string name="history_commission">Комиссия</string>
    <string name="history_date">Дата и время</string>
    <string name="history_status">Статус</string>
    <string name="history_check">№ чека</string>
    <string name="history_type">Тип</string>

    <string name="winner_present">Приз</string>
    <string name="winner_name">Имя участника</string>
    <string name="winner_offer_number">№ акции</string>
    <string name="winner_date">Дата окончания акции</string>
    <string name="winner_address">Адрес заказа</string>
    <string name="winner_deduction">Итог акции</string>
    <string name="winner_status_exist">Приз выплачен победителю</string>
    <string name="winner_status_pending">Приз выплачен победителю</string>
    <string name="winner_status_doesnt_exist">Приз выплачен победителю</string>
    <string name="transaction_status_success">Успешно</string>
    <string name="transaction_status_pending">Обработка…</string>
    <string name="transaction_status_cancelled">Отменено</string>
    <string name="transaction_status_failed">Ошибка!</string>
    <string name="transaction_type_purchase">Покупка участия в акции</string>
    <string name="transaction_type_payout">Вывод средств</string>
    <string name="transaction_type_winner">Зачисление призовых средств</string>

    <string name="hint_phone">79876543210</string>
    <string name="hint_first_name">Иван</string>
    <string name="hint_last_name">Иванов</string>
    <string name="hint_patronymic">Иванович</string>
    <string name="hint_birth_date">19.19.1999</string>
    <string name="hint_city">Москва</string>
    <string name="hint_car_number">а123бв</string>
    <string name="hint_car_region_code">55</string>

    <string name="message_registration_successful">Регистрация прошла успешно.\nВаш пароль: %s</string>

    <string name="error_connection">Отсутсвует подключение к интернету</string>
    <string name="error_server">Сервер не отвечает</string>

    <string name="list_empty">Список пуст</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_winner">WinnerActivity</string>

</resources>
