<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/main_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offers"
            android:title="@string/deal_offers" />
        <item
            android:id="@+id/nav_winners"
            android:icon="@drawable/ic_cup"
            android:title="@string/deal_winners" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/deal_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/deal_profile" />
        <item
            android:id="@+id/nav_payout"
            android:icon="@drawable/ic_wallet"
            android:title="@string/deal_payout"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/deal_logout"/>
    </group>

    <item android:title="@string/nav_group_title">
        <menu>
            <item
                android:id="@+id/nav_condition"
                android:icon="@drawable/ic_info"
                android:title="@string/deal_condition" />
            <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/ic_phone_nav"
                android:title="@string/deal_contacts" />
        </menu>
    </item>

</menu>
